@@ -1,3 +1,7 @@
+2014-10-06	Erik E. Lorenz	<erik.e.lorenz@gmail.com>
+
+	* src/latexrefre.sh: showing multiply-defined labels
+
 2014-10-02	Erik E. Lorenz	<erik.e.lorenz@gmail.com>
 
 	* src/latexrefre.sh: showing undefined references and citations after compilation
